k8s/overlays/local/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: payment-gateway
spec:
  template:
    spec:
      containers:
        - name: payment-gateway
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: opsight
  name: opsight-ai-rca
spec:
  template:
    spec:
      containers:
        - name: ai-rca
          resources:
            requests:
              cpu: 100m
              memory: 160Mi
            limits:
              cpu: 750m
              memory: 768Mi
